=================

Version 1.13 (preliminary)
--------------------------

* Thesis record information and file information edit forms no longer
  use XForms; all XForm code has been removed from the site.
* Help request form has been updated to use jQuery instead of Dojo;
  commencement report has been updated to use FCKeditor instead of
  Dojo; all Dojo code has been removed from the site.


Version 1.12.5 - April 2012
---------------------------------------
* Added  Applied Public Health Informatics program to Career Masters of Public Health department in Rollins
* Added  Bioethics program to Grad School
* Added Melissa Krancer as ADAP for above program

Version 1.12.4 - January 2012
---------------------------------------
* Bugfix for empty embargo duration.
* Allow all versions of Firefox.

Version 1.12.3 - January 2012
---------------------------------------
* Bugfix for no embargo notification emails in 2012.

Version 1.12.2 - October 2011
---------------------------------------
* Bugfix for repeated embargo notification emails.

Version 1.12.1 - October 2011
---------------------------------------
* BugFix for download pdf failure.

Version 1.12 - October 2011
---------------------------------------
* Indexdata service configures ETD Fedora content to be indexed in Solr using eulindexer.
* Deploy eulindexer for ETD website:
  * https://github.com/emory-libraries/eulindexer/blob/master/DEPLOYNOTES.rst
* Reduced logging for publish script for revised ALUMNI.CSV file.

Version 1.11.1 - September 2011
---------------------------------------
* Change label for "Graduate School" to "Laney Graduate School" 
* Fix bug for research fields link on short list.
* Add last-modified and etag headers to file download view; 
  honor if-none-match and if-modified-since headers on request 
* Add last-modified header to etd record view; 
  honor if-modified-since header
* If guest user, do not attempt to retrieve the abstract/toc 